--- a/TP7_Grupo1/TP7_Grupo1.csproj
+++ b/TP7_Grupo1/TP7_Grupo1.csproj
@@ -72,6 +72,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\AccesoDatos.cs" />
     <Compile Include="ListadoSucursalesSeleccionados.aspx.cs">
       <DependentUpon>ListadoSucursalesSeleccionados.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -87,6 +88,7 @@
     <Compile Include="SeleccionarSucursales.aspx.designer.cs">
       <DependentUpon>SeleccionarSucursales.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Clases\Tablas.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
