--- a/TP7_Grupo1/Web.config
+++ b/TP7_Grupo1/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BDSucursalesConnectionString" connectionString="Data Source=laptop-d5dkhvl7\sqlexpress01;Initial Catalog=BDSucursales;Integrated Security=True"
+    <add name="BDSucursalesConnectionString" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=BDSucursales;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
